02 - Fixed the background contrast at the experience section and also some iconography improvements on navigation bar and header-intro features on projects section.

--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@
 }
 
 #rootDarkMode {
-	--bg: #000;
+	--bg: #121212;
 
 	--text-selection-background: #f2f2f7;
 	--text-selection-foreground: #181818;
